2016-09-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Imports): Added 'Matrix, DBI, RSQLite, plyr, reshape, lattice'

	* NAMESPACE: Added importFrom() statements for each package

	* R/benchmark.R (svdBenchmarkgputools): Commented-out as SVD no
	longer in current gputools
	* man/benchmark.Rd: Commented-out here too

2013-12-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.5

	* vignettes/*: Moved files from inst/doc/

	* ChangeLog/*: Moved from inst/

	* .travis.yml: Added for Github / Travis support
	* .gitignore: Added for git support

	* R/figures.R: Remove extraneous require(reshape)

2010-10-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.4

	* R/figures.R: Added figure_Lattice()
	* man/figures.Rd: Added figure_Lattice()

	* inst/doc/gcbd.Rnw: Applied a number of small fixes and changed
	results discussion to use the lattice figures

2010-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.3

	* R/figures.R: Added figure_loglogLattice()
	* man/figures.Rd: Added figure_loglogLattice()

2010-09-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.2

2010-09-13  Dirk Eddelbuettel  <edd@debian.org>

	* R/*R: Remove magma tests code for now
	* man.*Rd: Updated documentation
	* inst/doc/gcbd.Rnw: Updated accordingly

2010-09-12  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Added, at last

2010-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* R/figures.R: Place code to for vignette figures here
	* man/figures.Rd: Documentation for the above

2010-09-03  Dirk Eddelbuettel  <edd@debian.org>

	* R/analysis.R: Analysis of log/log plot

	* DESCRIPTION: Version 0.2.1
	* DESCRIPTION: Added Depends: on plyr, reshape and lattice

2010-09-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Increased to 'Version 0.2.0'

	* inst/sql/gcbd.sqlite: Results from 'run 2'

2010-09-01  Dirk Eddelbuettel  <edd@debian.org>

        * inst/scripts/benchmark.r: Added atl39 calls
