@@ -1,29 +1,34 @@
-# Sample .travis.yml for R projects.
-# Taken from my fork of Craig Citro's r-travis
-#
-# See https://github.com/eddelbuettel/r-travis/
-# and https://github.com/craigcitro/r-travis
-#
-# See README.md for instructions.
+# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
 
 language: c
+
+sudo: required
+
+dist: trusty
 
 env:
   global:
     - _R_CHECK_FORCE_SUGGESTS_=FALSE
 
 before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
+  - curl -OLs http://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
+  - ./run.sh bootstrap
 
-#install:
-  - ./travis-tool.sh r_install RSQLite plyr reshape
+install:
+  - ./run.sh install_aptget r-cran-dbi r-cran-rsqlite r-cran-plyr r-cran-reshape
 
-script: ./travis-tool.sh run_tests
+script:
+  - ./run.sh run_tests
+
+after_failure:
+  - ./run.sh dump_logs
 
 notifications:
   email:
     on_success: change
     on_failure: change
 
+    
+
+
+    
